--- a/OTPEncrypt/OTPEncrypt.vcxproj
+++ b/OTPEncrypt/OTPEncrypt.vcxproj
@@ -145,10 +145,16 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="File.h" />
+    <ClInclude Include="FileSysObj.h" />
+    <ClInclude Include="Folder.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="File.cpp" />
+    <ClCompile Include="FileSysObj.cpp" />
+    <ClCompile Include="Folder.cpp" />
     <ClCompile Include="OTPEncrypt.cpp" />
     <ClCompile Include="stdafx.cpp" />
   </ItemGroup>
